# matrix

./: Cargo.toml  README.md
src/: main.rs  matrix.rs
tests/: unit_tests.rs
