[package]
name = "small_matrix"
version = "0.5.0"
authors = ["ph04 alessio.bandiera02@gmail.com"]
edition = "2018"
description = "A simple matrix library made in Rust."
repository = "https://github.com/ph04/matrix"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["rust", "math", "matrix", "rust-matrix", "rust-math"]